Changed name to pcpartsbuild

--- a/Frontend/Giriş_Yap.html
+++ b/Frontend/Giriş_Yap.html
@@ -2,7 +2,7 @@
 <html class="dark" lang="tr"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="auth-signup-title">Kayıt Ol - Match Parts</title>
+<title data-i18n="auth-signup-title">Kayıt Ol - PCPartsBuild</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
@@ -56,7 +56,7 @@
 <!-- Body karanlık moda sabitlendi -->
 <body class="bg-background-dark font-display text-gray-300 transition-default overflow-hidden">
 <video autoplay="" id="bg-video" loop="" muted="" playsinline="">
-<source src="Assets/Videos/video1.mp4" type="video/mp4"/>
+<source src="Assets/Videos/Video1.webm" type="video/webm"/>
     Your browser does not support the video tag.
   </video>
 <a class="absolute top-4 left-4 z-20 w-12 h-12 rounded-full bg-black/30 backdrop-blur-md border border-white/20 flex items-center justify-center text-white hover:bg-black/50 transition-colors" href="anasayfa.html">
@@ -83,7 +83,7 @@
 
 <div class="relative min-h-screen grid grid-cols-1 lg:grid-cols-2">
 <div class="hidden lg:flex flex-col items-center justify-center text-center px-8">
-<img src="Assets/Images/logo.png" alt="Match Parts Logo" class="h-40">
+<img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-40">
 <h2 class="font-bold text-5xl text-white mt-4"></h2>
 <p class="text-gray-400 mt-2 max-w-sm" data-i18n="auth-welcome-subtitle">Hayalinizdeki Bilgisayarı hassasiyet ve güvenle tasarlayın.</p>
 </div>
@@ -121,8 +121,8 @@
 </p>
 </footer>
 </div>
-<footer class="absolute bottom-8"> <p class="text-xs text-gray-500"> © 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın: 
-        <a class="text-primary hover:underline" href="mailto:MatchParts@gmail.com">MatchParts@gmail.com</a>
+<footer class="absolute bottom-8"> <p class="text-xs text-gray-500"> © 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın: 
+        <a class="text-primary hover:underline" href="mailto:pcpartsbuild@gmail.com">pcpartsbuild@gmail.com</a>
     </p>
 </footer>
 </div>
@@ -132,8 +132,8 @@
     // Çeviri Sözlüğü (Senin kodun - Dokunulmadı)
     const translations = {
         tr: {
-            "app-builder": "Match Parts",
-            "auth-signup-title": "Giriş Yap - Match Parts", // Başlık "Giriş Yap" olarak güncellendi (Dosyadan alındı)
+            "app-builder": "PCPartsBuild",
+            "auth-signup-title": "Giriş Yap - PCPartsBuild", // Başlık "Giriş Yap" olarak güncellendi (Dosyadan alındı)
             "auth-welcome-title": "Hoşgeldiniz",
             "auth-login-title": "Giriş Yap",
             "auth-login-subtitle": "Lütfen hesabınıza giriş yapın.",
@@ -146,8 +146,8 @@
             "link-signup": "Kayıt Ol",
         },
         en: {
-            "app-builder": "Match Parts",
-            "auth-signup-title": "Log In - Match Parts", // Başlık "Log In" olarak güncellendi (Dosyadan alındı)
+            "app-builder": "PCPartsBuild",
+            "auth-signup-title": "Log In - PCPartsBuild", // Başlık "Log In" olarak güncellendi (Dosyadan alındı)
             "auth-welcome-title": "Welcome Back",
             "auth-login-title": "Log In",
             "auth-login-subtitle": "Please log into your account.",
