--- a/Frontend/anasayfa.html
+++ b/Frontend/anasayfa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title data-i18n="app-title">Match Parts - Build Your Dream PC</title>
+    <title data-i18n="app-title">PCPartsBuild - Build Your Dream PC</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"/>
@@ -51,7 +51,7 @@
     <div class="relative flex min-h-screen w-full flex-col">
         <div class="absolute inset-0 z-0 overflow-hidden">
             <video autoplay="" class="h-full w-full object-cover brightness-50" loop="" muted="" playsinline="">
-                <source src="Assets/Videos/video2.mp4" type="video/mp4" onerror="this.onerror=null;this.parentElement.style.display='none';">
+                <source src="Assets/Videos/Video2.webm" type="video/webm" onerror="this.onerror=null;this.parentElement.style.display='none';">
                 Your browser does not support the video tag.
             </video>
         </div>
@@ -60,7 +60,7 @@
                 <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-white/10 py-4">
                     <div class="flex items-center gap-4 text-white">
                         <div class="flex items-center gap-4 text-white">
-                            <img src="Assets/Images/logo.png" alt="Match Parts Logo" class="h-20">
+                            <img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-14">
                         </div>
                         <h2 class="text-white text-xl font-bold leading-tight tracking-[-0.015em] font-display" ></h2>
                     </div>
@@ -172,7 +172,7 @@
                         <a class="text-white/60 transition-colors hover:text-white" href="#"><svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewbox="0 0 24 24"><path clip-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.013-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.345 2.525c.636-.247 1.363-.416 2.427-.465C9.793 2.013 10.147 2 12.315 2zm0 1.623c-2.403 0-2.72.01-3.667.058-1.146.052-1.602.248-1.922.458-.426.28-.765.624-1.043 1.043-.28.426-.624.765-1.043 1.043-.21.32-.406.776-.458 1.922-.048.947-.058 1.264-.058 3.667s.01 2.72.058 3.667c.052 1.146.248 1.602.458 1.922.28.426.624.765 1.043 1.043.426.28.765.624 1.043 1.043.32.21.776.406 1.922.458.947.048 1.264.058 3.667.058s2.72-.01 3.667-.058c1.146-.052 1.602-.248 1.922-.458.426-.28.765-.624 1.043-1.043.28-.426.624-.765 1.043-1.043.32-.21.406-.776.458-1.922.048-.947.058-1.264.058-3.667s-.01-2.72-.058-3.667c-.052-1.146-.248-1.602-.458-1.922-.28-.426-.624-.765-1.043-1.043-.426-.28-.765-.624-1.043-1.043-.32-.21-.776-.406-1.922-.458-.947-.048-1.264-.058-3.667-.058zM12 6.865a5.135 5.135 0 100 10.27 5.135 5.135 0 000-10.27zm0 1.623a3.512 3.512 0 110 7.024 3.512 3.512 0 010-7.024zM16.536 6.808a1.2 1.2 0 100 2.4 1.2 1.2 0 000-2.4z" fill-rule="evenodd"></path></svg></a>
                     </div>
                     <p class="text-white/60 text-sm font-normal leading-normal" data-i18n="footer-copyright-container">
-                        <span data-i18n="footer-copyright">© 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın:</span> <a class="underline hover:text-primary" href="mailto:MatchParts@gmail.com">MatchParts@gmail.com</a>
+                        <span data-i18n="footer-copyright">© 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın:</span> <a class="underline hover:text-primary" href="mailto:pcpartsbuild@gmail.com">pcpartsbuild@gmail.com</a>
                     </p>
                 </footer>
             </div>
@@ -183,7 +183,7 @@
         // Çeviri Sözlüğü
         const translations = {
             tr: {
-                "app-title": "Match Parts",
+                "app-title": "PCPartsBuild",
                 "nav-wizard": "PC Toplama Sihirbazı",
                 "nav-compatibility": "Parça Uyumluluk Kontrolü",
                 "nav-info": "PC Bileşenleri",
@@ -203,10 +203,10 @@
                 "feature-2-desc": "Sisteminizi sıfırdan monte etmek için sezgisel sihirbazımızı takip edin.",
                 "feature-3-title": "Güncel Parça Bilgileri",
                 "feature-3-desc": "Binlerce PC parçası hakkında detaylı bilgilere göz atın ve karşılaştırma yapın.",
-                "footer-copyright": "© 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın:"
+                "footer-copyright": "© 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın:"
             },
             en: {
-                "app-title": "Match Parts",
+                "app-title": "PCPartsBuild",
                 "nav-wizard": "PC Build Wizard",
                 "nav-compatibility": "Part Compatibility Check",
                 "nav-info": "PC Components ",
@@ -226,7 +226,7 @@
                 "feature-2-desc": "Follow our intuitive wizard to assemble your system from the ground up.",
                 "feature-3-title": "Up-to-Date PC Components ",
                 "feature-3-desc": "Browse detailed information and compare thousands of PC components.",
-                "footer-copyright": "© 2025 Match Parts. All Rights Reserved. Contact Us:"
+                "footer-copyright": "© 2025 PCPartsBuild. All Rights Reserved. Contact Us:"
             }
         };
 
@@ -240,7 +240,7 @@
                 if (key === 'footer-copyright') {
                     const parentP = element.closest('p');
                     const emailLink = parentP.querySelector('a');
-                    const email = emailLink ? emailLink.textContent : 'MatchParts@gmail.com';
+                    const email = emailLink ? emailLink.textContent : 'pcpartsbuild@gmail.com';
                     parentP.innerHTML = `${translation} <a class="underline hover:text-primary" href="mailto:${email}">${email}</a>`;
                 } else {
                     element.textContent = translation;
@@ -341,7 +341,7 @@
                         background: '#111c22', // Koyu tema rengi
                         color: '#fff',
                         showConfirmButton: false,
-                        timer: 2000,
+                        timer: 1000,
                         timerProgressBar: true
                     }).then(() => {
                         localStorage.removeItem('loggedInUser');
