--- a/Frontend/pbg.html
+++ b/Frontend/pbg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title data-i18n="app-title">PC Bileşenleri - Match Parts</title>
+    <title data-i18n="app-title">PC Bileşenleri - PCPartsBuild</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
@@ -65,7 +65,7 @@
         <header class="w-full px-4 md:px-8 py-4 border-b border-gray-200 dark:border-gray-800/50 transition-default">
             <nav class="container mx-auto flex justify-between items-center">
                 <a class="flex items-center gap-2 text-xl font-bold text-gray-900 dark:text-white" href="anasayfa.html">
-                    <img src="Assets/Images/logo.png" alt="Match Parts Logo" class="h-20 transition-all duration-300 filter brightness-50 dark:filter-none">
+                    <img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-14 transition-all duration-300 filter brightness-50 dark:filter-none">
                 </a>
                 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600 dark:text-gray-300">
                     <a class="text-gray-600 dark:text-white/80 text-sm font-medium leading-normal transition-colors hover:text-gray-900 dark:hover:text-white" href="pts.html" data-i18n="nav-wizard">PC Toplama Sihirbazı</a>
@@ -121,7 +121,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="cpu image" class="w-auto h-40" src="Assets/Images/cpu.png" >
+                       <img alt="cpu image" class="w-auto h-40" src="Assets/Images/cpu.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="cpu-title">İşlemci (CPU)</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cpu-desc">Bilgisayarın beynidir. Tüm hesaplamaları yapar, komutları işler ve diğer bileşenleri yönetir.</p>
@@ -129,7 +129,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="ekrankartı image" class="w-auto h-32" src="Assets/Images/ekrankartı.png" >
+                       <img alt="ekrankartı image" class="w-auto h-32" src="Assets/Images/ekrankarti.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="gpu-title">Ekran Kartı (GPU)</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="gpu-desc">Görüntüleri oluşturur ve monitöre gönderir. Özellikle oyunlar, video düzenleme ve 3D modelleme için kritiktir.</p>
@@ -137,7 +137,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="ram image" class="w-auto h-30" src="Assets/Images/ram.png" >
+                       <img alt="ram image" class="w-auto h-30" src="Assets/Images/ram.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="ram-title">Bellek (RAM)</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="ram-desc">Bilgisayarın aktif olarak kullandığı verileri geçici olarak depolar. Hızlı erişim sağlar ve çoklu görev performansını etkiler.</p>
@@ -145,7 +145,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="ssd image" class="w-60 h-18" src="Assets/Images/ssd.png" >
+                       <img alt="ssd image" class="w-60 h-18" src="Assets/Images/ssd.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="ssd-title">Depolama (SSD)</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="ssd-desc">İşletim sistemini, programları ve dosyaları kalıcı olarak saklar. SSD'ler, hızlı okuma/yazma hızlarıyla sistemi hızlandırır.</p>
@@ -153,7 +153,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="anakart image" class="w-auto h-40" src="Assets/Images/anakart.png" >
+                       <img alt="anakart image" class="w-auto h-40" src="Assets/Images/anakart.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="mobo-title">Anakart </h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="mobo-desc">Tüm bileşenlerin bağlandığı ve birbiriyle iletişim kurduğu ana devre kartıdır. Parça uyumluluğunu belirler.</p>
@@ -161,7 +161,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="power image" class="w-auto h-40" src="Assets/Images/güç.png" >
+                       <img alt="power image" class="w-auto h-40" src="Assets/Images/guc.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="psu-title">Güç Kaynağı (PSU)</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="psu-desc">Şebekeden gelen elektriği, bileşenlerin ihtiyaç duyduğu doğru voltajlara dönüştürür ve sisteme güç sağlar.</p>
@@ -169,7 +169,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="kasa image" class="w-auto h-40" src="Assets/Images/kasa.png" >
+                       <img alt="kasa image" class="w-auto h-40" src="Assets/Images/kasa.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="case-title">Kasa</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="case-desc">Tüm hassas bileşenleri fiziksel olarak korur, bir arada tutar ve hava akışı sağlayarak soğumaya yardımcı olur.</p>
@@ -177,7 +177,7 @@
 
                 <div class="bg-card-light dark:bg-card-dark p-6 rounded-lg border border-gray-200 dark:border-gray-700 transition-default shadow-md hover:shadow-lg hover:scale-[1.02]">
                     <div class="component-placeholder">
-                       <img alt="soğutmasistemleri image" class="w-auto h-24" src="Assets/Images/amınoğlusıvısoğutma.png" >
+                       <img alt="soğutmasistemleri image" class="w-auto h-24" src="Assets/Images/sıvısogutma.webp" >
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2" data-i18n="cooler-title">Soğutma Sistemleri</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400" data-i18n="cooler-desc">Özellikle CPU ve GPU gibi çok ısınan bileşenlerin sıcaklıklarını düşürerek stabil performansı ve uzun ömrü garanti eder.</p>
@@ -187,7 +187,7 @@
 
         <footer class="w-full mt-20 py-8 border-t border-gray-200 dark:border-gray-800">
             <div class="container mx-auto text-center text-gray-500 dark:text-gray-400 text-sm">
-                <p>© 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın: <a class="text-primary hover:underline" href="mailto:MatchParts@gmail.com">MatchParts@gmail.com</a></p>
+                <p>© 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın: <a class="text-primary hover:underline" href="mailto:pcpartsbuild@gmail.com">pcpartsbuild@gmail.com</a></p>
             </div>
         </footer>
     </div>
@@ -196,7 +196,7 @@
     // --- ÇEVİRİ SÖZLÜĞÜ (GÜNCEL) ---
     const translations = {
         tr: {
-            "app-title": "PC Bileşenleri - Match Parts",
+            "app-title": "PC Bileşenleri - PCPartsBuild",
             "nav-wizard": "PC Toplama Sihirbazı",
             "nav-compatibility": "Parça Uyumluluk Kontrolü",
             "nav-info": "PC Bileşenleri",
@@ -225,7 +225,7 @@
             "cooler-desc": "Özellikle CPU ve GPU gibi çok ısınan bileşenlerin sıcaklıklarını düşürerek stabil performansı ve uzun ömrü garanti eder."
         },
         en: {
-            "app-title": "PC Components - Match Parts",
+            "app-title": "PC Components - PCPartsBuild",
             "nav-wizard": "PC Build Wizard",
             "nav-compatibility": "Part Compatibility Check",
             "nav-info": "PC Components",
@@ -447,7 +447,7 @@
                     background: '#1f2937', 
                     color: '#fff',
                     showConfirmButton: false,
-                    timer: 2000,
+                    timer: 1000,
                     timerProgressBar: true
                 }).then(() => {
                     localStorage.removeItem('loggedInUser');
