--- a/Frontend/pts.html
+++ b/Frontend/pts.html
@@ -88,7 +88,7 @@
 <header class="w-full px-4 md:px-8 py-4 border-b border-gray-200 dark:border-gray-800/50 transition-default">
 <nav class="container mx-auto flex justify-between items-center">
 <a class="flex items-center gap-2 text-xl font-bold text-gray-900 dark:text-white" href="anasayfa.html">
-    <img src="Assets/Images/logo.png" alt="Match Parts Logo" class="h-20 transition-all brightness-50 duration-300 dark:filter-none">
+    <img src="Assets/Images/logo.webp" alt="PCPartsBuild" class="h-14 transition-all brightness-50 duration-300 dark:filter-none">
 </a>
 
 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600 dark:text-gray-300">
@@ -251,7 +251,7 @@
 <div class="container mx-auto text-center text-gray-500 dark:text-gray-400 text-sm">
 <div class="flex justify-center items-center gap-4 mb-4">
 </div>
-<p>© 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın: <a class="text-primary hover:underline" href="mailto:MatchParts@gmail.com">MatchParts@gmail.com</a></p>
+<p>© 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın: <a class="text-primary hover:underline" href="mailto:pcpartsbuild@gmail.com">pcpartsbuild@gmail.com</a></p>
 </div>
 </footer>
 
@@ -1659,7 +1659,7 @@ function calculateTotals() {
                 background: '#1f2937', // Koyu tema rengi
                 color: '#fff', // Beyaz yazı
                 showConfirmButton: false,
-                timer: 2000, // 2 saniye bekle
+                timer: 1000, // 2 saniye bekle
                 timerProgressBar: true
             }).then(() => {
                 // Hafızayı temizle ve sayfayı yenile
