--- a/Frontend/sifre-sifirla.html
+++ b/Frontend/sifre-sifirla.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Yeni Şifre Belirle - Match Parts</title>
+    <title>Yeni Şifre Belirle - PCPartsBuild</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
@@ -32,7 +32,7 @@
 
 <body class="bg-background-dark font-display text-gray-300 transition-default overflow-hidden">
     <video autoplay="" id="bg-video" loop="" muted="" playsinline="">
-        <source src="Assets/Videos/video1.mp4" type="video/mp4"/>
+        <source src="Assets/Videos/Video1.webm" type="video/webm"/>
     </video>
 
     <div class="relative min-h-screen flex items-center justify-center p-4 lg:p-8">
@@ -128,7 +128,7 @@
                         text: 'Yeni şifrenizle giriş yapabilirsiniz. Yönlendiriliyorsunuz...',
                         icon: 'success',
                         background: '#1f2937', color: '#fff', confirmButtonColor: '#16a3b2',
-                        timer: 3000, timerProgressBar: true
+                        timer: 1000, timerProgressBar: true
                     }).then(() => {
                         window.location.href = 'giris.html'; // Giriş sayfasına yönlendir
                     });
