--- a/Frontend/kaydol.html
+++ b/Frontend/kaydol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title data-i18n="auth-signup-title">Kayıt Ol - Match Parts</title>
+    <title data-i18n="auth-signup-title">Kayıt Ol - PCPartsBuild</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
@@ -40,7 +40,7 @@
 
 <body class="bg-background-dark font-display text-gray-300 transition-default overflow-hidden">
     <video autoplay="" id="bg-video" loop="" muted="" playsinline="">
-        <source src="Assets/Videos/video1.mp4" type="video/mp4"/>
+        <source src="Assets/Videos/Video1.webm" type="video/webm"/>
     </video>
     
     <a class="absolute top-4 left-4 z-20 w-12 h-12 rounded-full bg-black/30 backdrop-blur-md border border-white/20 flex items-center justify-center text-white hover:bg-black/50 transition-colors" href="anasayfa.html">
@@ -61,7 +61,7 @@
 
     <div class="relative min-h-screen grid grid-cols-1 lg:grid-cols-2">
         <div class="hidden lg:flex flex-col items-center justify-center text-center px-8">
-            <img src="Assets/Images/logo.png" alt="Match Parts Logo" class="h-40">
+            <img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-40">
             <h2 class="font-bold text-5xl text-white mt-4"></h2>
             <p class="text-gray-400 mt-2 max-w-sm" data-i18n="auth-welcome-subtitle">Hayalinizdeki Bilgisayarı hassasiyet ve güvenle tasarlayın.</p>
         </div>
@@ -118,8 +118,8 @@
                 </footer>
             </div>
             <footer class="absolute bottom-8"> 
-                <p class="text-xs text-gray-500"> © 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın: 
-                    <a class="text-primary hover:underline" href="mailto:MatchParts@gmail.com">MatchParts@gmail.com</a>
+                <p class="text-xs text-gray-500"> © 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın: 
+                    <a class="text-primary hover:underline" href="mailto:pcpartsbuild@gmail.com">pcpartsbuild@gmail.com</a>
                 </p>
             </footer>
         </div>
@@ -143,8 +143,8 @@
     // Çeviri Sözlüğü
     const translations = {
         tr: {
-            "app-builder": "Match Parts",
-            "auth-signup-title": "Kayıt Ol - Match Parts",
+            "app-builder": "PCPartsBuild",
+            "auth-signup-title": "Kayıt Ol - PCPartsBuild",
             "auth-signup-title-main": "Hesabınızı oluşturun",
             "auth-signup-subtitle": "Özel bilgisayar yolculuğunuza bugün başlayın.",
             "auth-welcome-subtitle": "Hayalinizdeki Bilgisayarı hassasiyet ve güvenle tasarlayın.",
@@ -158,8 +158,8 @@
             "link-login": "Giriş",
         },
         en: {
-            "app-builder": "Match Parts",
-            "auth-signup-title": "Sign Up - Match Parts",
+            "app-builder": "PCPartsBuild",
+            "auth-signup-title": "Sign Up - PCPartsBuild",
             "auth-signup-title-main": "Create Your Account",
             "auth-signup-subtitle": "Start your custom PC journey today.",
             "auth-welcome-subtitle": "Design your dream PC with precision and confidence.",
@@ -293,7 +293,7 @@
                             background: '#1f2937',
                             color: '#fff',
                             confirmButtonColor: '#16a3b2',
-                            timer: 3000,
+                            timer: 1000,
                             timerProgressBar: true
                         }).then(() => {
                             window.location.href = 'giris.html'; // Standart dosya adı
