--- a/Frontend/puk.html
+++ b/Frontend/puk.html
@@ -49,7 +49,7 @@
     <header class="w-full px-4 md:px-8 py-4 border-b border-gray-200 dark:border-gray-800/50 transition-default">
         <nav class="container mx-auto flex justify-between items-center">
             <a class="flex items-center gap-2 text-xl font-bold text-gray-900 dark:text-white" href="anasayfa.html">
-                <img src="Assets/Images/logo.png" alt="Match Parts Logo" class="h-20 transition-all duration-300 filter brightness-50 dark:filter-none">
+                <img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-14 transition-all duration-300 filter brightness-50 dark:filter-none">
             </a>
 
             <div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600 dark:text-gray-300">
@@ -219,7 +219,7 @@
 
     <footer class="w-full mt-20 py-8 border-t border-gray-200 dark:border-gray-800">
         <div class="container mx-auto text-center text-gray-500 dark:text-gray-400 text-sm">
-            <p>© 2025 Match Parts. Tüm Hakları Saklıdır. Bize Ulaşın: <a class="text-primary hover:underline" href="mailto:MatchParts@gmail.com">MatchParts@gmail.com</a></p>
+            <p>© 2025 PCPartsBuild. Tüm Hakları Saklıdır. Bize Ulaşın: <a class="text-primary hover:underline" href="mailto:pcpartsbuild@gmail.com">pcpartsbuild@gmail.com</a></p>
         </div>
     </footer>
 </div>
@@ -631,7 +631,7 @@
                     background: '#1f2937', 
                     color: '#fff',
                     showConfirmButton: false,
-                    timer: 2000,
+                    timer: 1000,
                     timerProgressBar: true
                 }).then(() => {
                     localStorage.removeItem('loggedInUser');
