--- a/Frontend/anasayfa.html
+++ b/Frontend/anasayfa.html
@@ -59,7 +59,7 @@
             <div class="mx-auto flex w-full max-w-6xl flex-1 flex-col px-4 sm:px-6 lg:px-8">
                 <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-white/10 py-4">
                     <div class="flex items-center gap-4 text-white">
-                        <div class="flex items-center gap-4 text-white">
+                        <div class=" top-0 left-72 z-auto flex px-4 py-4 items-center gap-4 text-white">
                             <img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-14">
                         </div>
                         <h2 class="text-white text-xl font-bold leading-tight tracking-[-0.015em] font-display" ></h2>
