--- a/Frontend/puk.html
+++ b/Frontend/puk.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title data-i18n="app-title">PC Parça Uyumluluk Kontrolü</title>
+    <link rel="icon" type="image/ico" href="Assets/Images/favicon.ico">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet"/>
