--- a/Frontend/pts.html
+++ b/Frontend/pts.html
@@ -89,7 +89,7 @@
 <header class="w-full px-4 md:px-8 py-4 border-b border-gray-200 dark:border-gray-800/50 transition-default">
 <nav class="container mx-auto flex justify-between items-center">
 <a class="flex items-center gap-2 text-xl font-bold text-gray-900 dark:text-white" href="anasayfa.html">
-    <img src="Assets/Images/logo.webp" alt="PCPartsBuild" class="h-14 transition-all brightness-50 duration-300 dark:filter-none">
+    <img src="Assets/Images/logo.webp" alt="PCPartsBuild" class="h-14 transition-all duration-300 dark:filter-none">
 </a>
 
 <div class="hidden md:flex items-center gap-8 text-sm font-medium text-gray-600 dark:text-gray-300">
