--- a/Frontend/giris.html
+++ b/Frontend/giris.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title data-i18n="auth-signup-title">Kayıt Ol - Match Parts</title>
+    <title data-i18n="auth-signup-title">Kayıt Ol - PCPartsBuild</title>
     <link rel="icon" type="image/ico" href="Assets/Images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
