--- a/Frontend/kayitli_sistemler.html
+++ b/Frontend/kayitli_sistemler.html
@@ -13,39 +13,10 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="/src/main.js"></script>
 
-    <link rel="stylesheet" href="./input.css">
-    
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        display: ['Poppins', 'sans-serif'],
-                    },
-                    colors: {
-                        primary: '#16a3b2', 
-                        'background-dark': '#0d1117',
-                        'background-light': '#e5e7eb',
-                    }
-                }
-            }
-        }
-    </script>
+    <link rel="stylesheet" href="./styles.css">
 
     <style>
-        /* Scrollbar Gizleme */
-        .scrollbar-hide::-webkit-scrollbar { display: none; }
-        .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
-        
-        /* Glass Effect */
-        .glass-panel {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-        }
+        .icon-transition { transition: opacity 0.3s, transform 0.3s; }
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-[#0d1117] font-sans text-gray-900 dark:text-white antialiased selection:bg-primary selection:text-white">
