--- a/Frontend/favorilerim.html
+++ b/Frontend/favorilerim.html
@@ -132,7 +132,7 @@
 
     </div>
 
-<script type="text/babel" data-cfasync="false">
+<script type="text/babel">
     const categories = [
         { id: 'cpu', key: 'cat-cpu', icon: 'memory' },
         { id: 'mobo', key: 'cat-mobo', icon: 'developer_board' },
