css problems fixed

--- a/Frontend/giris.html
+++ b/Frontend/giris.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 
-<body class="font-auth bg-background-dark font-display text-gray-300 transition-default overflow-hidden">
+<body class="font-auth font-display transition-default overflow-hidden bg-transparent">
     <video autoplay="" id="bg-video" loop="" muted="" playsinline="">
         <source src="Assets/Videos/Video1.webm" type="video/webm"/>
         Your browser does not support the video tag.
@@ -37,8 +37,8 @@
         </div>
     </div>
 
-    <div class="relative min-h-screen grid grid-cols-1 lg:grid-cols-2">
-        <div class="hidden lg:flex flex-col items-center justify-center text-center px-8">
+    <div class="relative z-10 min-h-screen grid grid-cols-1 lg:grid-cols-2 bg-transparent">
+        <div class="hidden lg:flex flex-col items-center justify-center text-center px-8 bg-transparent">
             <img src="Assets/Images/logo.webp" alt="PCPartsBuild Logo" class="h-40">
             <h2 class="font-bold text-5xl text-white mt-4"></h2>
             <p class="text-gray-400 mt-2 max-w-sm" data-i18n="auth-welcome-subtitle">Hayalinizdeki Bilgisayarı hassasiyet ve güvenle tasarlayın.</p>
